src/grammar/.antlr/TyCParser.py
# Generated from c:/Users/thanh/Downloads/HCMUT/_NamBa/_HocKy252/CO3005_PPL/btl/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'float'", 
                     "'int'", "'string'", "'void'", "'struct'", "'break'", 
                     "'case'", "'continue'", "'default'", "'else'", "'for'", 
                     "'if'", "'switch'", "'return'", "'while'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'||'", "'&&'", "'!'", "'++'", "'--'", 
                     "'='", "'.'", "'{'", "'}'", "'('", "')'", "';'", "','", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", 
                      "TYPE_AUTO", "TYPE_FLOAT", "TYPE_INT", "TYPE_STRING", 
                      "TYPE_VOID", "TYPE_STRUCT", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FOR", "IF", "SWITCH", "RETURN", 
                      "WHILE", "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", "OP_MOD", 
                      "IS_EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER", "LESS_OR_EQUAL", 
                      "GREATER_OR_EQUAL", "LOG_OR", "LOG_AND", "LOG_NOT", 
                      "INCREMENT", "DECREMENT", "ASSIGNMENT", "MEMBER_ACCESS", 
                      "LBR", "RBR", "LP", "RP", "SEMI", "COMMA", "COLON", 
                      "LIT_INT", "LIT_FLOAT", "LIT_STRING", "ID", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_type = 1
    RULE_structdcl = 2
    RULE_member_list = 3
    RULE_member = 4
    RULE_member_type = 5
    RULE_vardecl = 6
    RULE_struct_lit = 7
    RULE_memberdcl_prime = 8
    RULE_memberdcl_list = 9
    RULE_memberdcl = 10
    RULE_funcdecl = 11
    RULE_parameter_prime = 12
    RULE_parameter_list = 13
    RULE_parameter = 14
    RULE_body = 15
    RULE_statement_prime = 16
    RULE_statement_list = 17
    RULE_statement = 18
    RULE_ifStmt = 19
    RULE_whileStmt = 20
    RULE_forStmt = 21
    RULE_forInit = 22
    RULE_forCondition = 23
    RULE_forUpdate = 24
    RULE_breakStmt = 25
    RULE_continueStmt = 26
    RULE_returnStmt = 27
    RULE_switchStmt = 28
    RULE_switchBody = 29
    RULE_case_list = 30
    RULE_normal_case = 31
    RULE_default_case = 32
    RULE_expression = 33
    RULE_assignable = 34
    RULE_assignStmt = 35
    RULE_or_expr = 36
    RULE_and_expr = 37
    RULE_equality_expr = 38
    RULE_equality = 39
    RULE_compare_expr = 40
    RULE_compare = 41
    RULE_add_expr = 42
    RULE_add = 43
    RULE_mul_expr = 44
    RULE_mul = 45
    RULE_unary_expr = 46
    RULE_unary = 47
    RULE_prefix_expr = 48
    RULE_postfix_expr = 49
    RULE_postfix_op = 50
    RULE_ppfix = 51
    RULE_member_expr = 52
    RULE_member_access_tail = 53
    RULE_primary_expr = 54
    RULE_argument_prime = 55
    RULE_argument_list = 56
    RULE_argument = 57

    ruleNames =  [ "program", "type", "structdcl", "member_list", "member", 
                   "member_type", "vardecl", "struct_lit", "memberdcl_prime", 
                   "memberdcl_list", "memberdcl", "funcdecl", "parameter_prime", 
                   "parameter_list", "parameter", "body", "statement_prime", 
                   "statement_list", "statement", "ifStmt", "whileStmt", 
                   "forStmt", "forInit", "forCondition", "forUpdate", "breakStmt", 
                   "continueStmt", "returnStmt", "switchStmt", "switchBody", 
                   "case_list", "normal_case", "default_case", "expression", 
                   "assignable", "assignStmt", "or_expr", "and_expr", "equality_expr", 
                   "equality", "compare_expr", "compare", "add_expr", "add", 
                   "mul_expr", "mul", "unary_expr", "unary", "prefix_expr", 
                   "postfix_expr", "postfix_op", "ppfix", "member_expr", 
                   "member_access_tail", "primary_expr", "argument_prime", 
                   "argument_list", "argument" ]

    EOF = Token.EOF
    MULTI_LINE_COMMENT=1
    SINGLE_LINE_COMMENT=2
    TYPE_AUTO=3
    TYPE_FLOAT=4
    TYPE_INT=5
    TYPE_STRING=6
    TYPE_VOID=7
    TYPE_STRUCT=8
    BREAK=9
    CASE=10
    CONTINUE=11
    DEFAULT=12
    ELSE=13
    FOR=14
    IF=15
    SWITCH=16
    RETURN=17
    WHILE=18
    OP_ADD=19
    OP_SUB=20
    OP_MUL=21
    OP_DIV=22
    OP_MOD=23
    IS_EQUAL=24
    NOT_EQUAL=25
    LESS_THAN=26
    GREATER=27
    LESS_OR_EQUAL=28
    GREATER_OR_EQUAL=29
    LOG_OR=30
    LOG_AND=31
    LOG_NOT=32
    INCREMENT=33
    DECREMENT=34
    ASSIGNMENT=35
    MEMBER_ACCESS=36
    LBR=37
    RBR=38
    LP=39
    RP=40
    SEMI=41
    COMMA=42
    COLON=43
    LIT_INT=44
    LIT_FLOAT=45
    LIT_STRING=46
    ID=47
    WS=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def structdcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructdclContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructdclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.FuncdeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488355824) != 0):
                self.state = 118
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 116
                    self.structdcl()
                    pass
                elif token in [4, 5, 6, 7, 47]:
                    self.state = 117
                    self.funcdecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_FLOAT(self):
            return self.getToken(TyCParser.TYPE_FLOAT, 0)

        def TYPE_INT(self):
            return self.getToken(TyCParser.TYPE_INT, 0)

        def TYPE_STRING(self):
            return self.getToken(TyCParser.TYPE_STRING, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_type




    def type_(self):

        localctx = TyCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructdclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_STRUCT(self):
            return self.getToken(TyCParser.TYPE_STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LBR(self):
            return self.getToken(TyCParser.LBR, 0)

        def member_list(self):
            return self.getTypedRuleContext(TyCParser.Member_listContext,0)


        def RBR(self):
            return self.getToken(TyCParser.RBR, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structdcl




    def structdcl(self):

        localctx = TyCParser.StructdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structdcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(TyCParser.TYPE_STRUCT)
            self.state = 128
            self.match(TyCParser.ID)
            self.state = 129
            self.match(TyCParser.LBR)
            self.state = 130
            self.member_list()
            self.state = 131
            self.match(TyCParser.RBR)
            self.state = 132
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(TyCParser.MemberContext,0)


        def member_list(self):
            return self.getTypedRuleContext(TyCParser.Member_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_member_list




    def member_list(self):

        localctx = TyCParser.Member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member_list)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.member()
                self.state = 135
                self.member_list()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member_type(self):
            return self.getTypedRuleContext(TyCParser.Member_typeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_member




    def member(self):

        localctx = TyCParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.member_type()
            self.state = 141
            self.match(TyCParser.ID)
            self.state = 142
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_member_type




    def member_type(self):

        localctx = TyCParser.Member_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member_type)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.type_()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(TyCParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def ASSIGNMENT(self):
            return self.getToken(TyCParser.ASSIGNMENT, 0)

        def or_expr(self):
            return self.getTypedRuleContext(TyCParser.Or_exprContext,0)


        def TYPE_AUTO(self):
            return self.getToken(TyCParser.TYPE_AUTO, 0)

        def struct_lit(self):
            return self.getTypedRuleContext(TyCParser.Struct_litContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_vardecl




    def vardecl(self):

        localctx = TyCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.type_()
                self.state = 149
                self.match(TyCParser.ID)

                self.state = 150
                self.match(TyCParser.ASSIGNMENT)
                self.state = 151
                self.or_expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.type_()
                self.state = 154
                self.match(TyCParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.match(TyCParser.TYPE_AUTO)
                self.state = 157
                self.match(TyCParser.ID)

                self.state = 158
                self.match(TyCParser.ASSIGNMENT)
                self.state = 159
                self.or_expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.match(TyCParser.TYPE_AUTO)
                self.state = 161
                self.match(TyCParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 162
                self.match(TyCParser.ID)
                self.state = 163
                self.match(TyCParser.ID)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 164
                self.match(TyCParser.ID)
                self.state = 165
                self.match(TyCParser.ID)
                self.state = 166
                self.match(TyCParser.ASSIGNMENT)
                self.state = 167
                self.struct_lit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(TyCParser.LBR, 0)

        def memberdcl_prime(self):
            return self.getTypedRuleContext(TyCParser.Memberdcl_primeContext,0)


        def RBR(self):
            return self.getToken(TyCParser.RBR, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_lit




    def struct_lit(self):

        localctx = TyCParser.Struct_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_lit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(TyCParser.LBR)
            self.state = 171
            self.memberdcl_prime()
            self.state = 172
            self.match(TyCParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Memberdcl_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memberdcl_list(self):
            return self.getTypedRuleContext(TyCParser.Memberdcl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_memberdcl_prime




    def memberdcl_prime(self):

        localctx = TyCParser.Memberdcl_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_memberdcl_prime)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 32, 33, 34, 37, 39, 44, 45, 46, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.memberdcl_list()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Memberdcl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def memberdcl(self):
            return self.getTypedRuleContext(TyCParser.MemberdclContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def memberdcl_list(self):
            return self.getTypedRuleContext(TyCParser.Memberdcl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_memberdcl_list




    def memberdcl_list(self):

        localctx = TyCParser.Memberdcl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_memberdcl_list)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.memberdcl()
                self.state = 179
                self.match(TyCParser.COMMA)
                self.state = 180
                self.memberdcl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.memberdcl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_expr(self):
            return self.getTypedRuleContext(TyCParser.Or_exprContext,0)


        def struct_lit(self):
            return self.getTypedRuleContext(TyCParser.Struct_litContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_memberdcl




    def memberdcl(self):

        localctx = TyCParser.MemberdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_memberdcl)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.or_expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.struct_lit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def parameter_prime(self):
            return self.getTypedRuleContext(TyCParser.Parameter_primeContext,0)


        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def body(self):
            return self.getTypedRuleContext(TyCParser.BodyContext,0)


        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def TYPE_VOID(self):
            return self.getToken(TyCParser.TYPE_VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_funcdecl




    def funcdecl(self):

        localctx = TyCParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 189
                self.type_()

            elif la_ == 2:
                self.state = 190
                self.match(TyCParser.TYPE_VOID)

            elif la_ == 3:
                self.state = 191
                self.match(TyCParser.ID)


            self.state = 194
            self.match(TyCParser.ID)
            self.state = 195
            self.match(TyCParser.LP)
            self.state = 196
            self.parameter_prime()
            self.state = 197
            self.match(TyCParser.RP)
            self.state = 198
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_list(self):
            return self.getTypedRuleContext(TyCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_parameter_prime




    def parameter_prime(self):

        localctx = TyCParser.Parameter_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter_prime)
        try:
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.parameter_list()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(TyCParser.ParameterContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(TyCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_parameter_list




    def parameter_list(self):

        localctx = TyCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameter_list)
        try:
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 204
                self.parameter()
                self.state = 205
                self.match(TyCParser.COMMA)
                self.state = 206
                self.parameter_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_parameter




    def parameter(self):

        localctx = TyCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6]:
                self.state = 211
                self.type_()
                pass
            elif token in [47]:
                self.state = 212
                self.match(TyCParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 215
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'
